--- a/web/webqtl/.htaccess
+++ b/web/webqtl/.htaccess
@@ -1,5 +1,5 @@
 AddHandler python-program .py
 PythonHandler main
-PythonInterpreter GeneNetwork
+PythonInterpreter zach
 PythonOption session FileSession
 PythonDebug On
