Committer: root <root@alexandria.uthsc.edu>
 On branch master
 Changes to be committed:
	modified:   ../.htaccess
	modified:   webqtlConfigLocal.py

--- a/web/webqtl/.htaccess
+++ b/web/webqtl/.htaccess
@@ -1,5 +1,5 @@
 AddHandler python-program .py
 PythonHandler main
-PythonInterpreter leiyan
+PythonInterpreter GeneNetwork
 PythonOption session FileSession
 PythonDebug On
