GeneNetwork configuration for Lei Yan
Committer: root <root@alexandria.uthsc.edu>

 On branch leiyan
 Changes to be committed:
	modified:   web/webqtl/.htaccess
	modified:   web/webqtl/base/webqtlConfigLocal.py

--- a/web/webqtl/.htaccess
+++ b/web/webqtl/.htaccess
@@ -1,5 +1,5 @@
 AddHandler python-program .py
 PythonHandler main
-PythonInterpreter GeneNetwork
+PythonInterpreter LeiYan
 PythonOption session FileSession
 PythonDebug On
