Committer: root <root@alexandria.uthsc.edu> On branch develop

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.pyc
-/web/ProbeSetFreeze_DataMatrix
-/web/bxd
-/web/genotypes
-/web/image
-/web/plink
-/web/tmp
+web/ProbeSetFreeze_DataMatrix/
+web/bxd/
+web/genotypes/
+web/image/
+web/plink/
+web/tmp/
