--- a/web/webqtl/maintainance/dataset/datasampledir/delete_genotypes/config.ini
+++ b/web/webqtl/maintainance/dataset/datasampledir/delete_genotypes/config.ini
@@ -1,5 +1,5 @@
 [config]
-inbredsetid = 1
+genofreezeid = 1
 datafile = datasampledir/delete_genotypes/sample_data1.txt
 # or
 # datafile = datasampledir/delete_genotypes/sample_data2.txt
