--- a/etc/httpd.conf
+++ b/etc/httpd.conf
@@ -47,48 +47,48 @@ LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 ServerRoot /gnu/store/qqwmxqcp4vi0m0n3c4d632lhvwgkqyvz-httpd-with-mod-python-2.2.34
-ServerName gn1-new.genenetwork.org
+ServerName gn1-pjotr.genenetwork.org
 DocumentRoot /srv/http
-Listen 8042
-Pidfile /tmp/guix-gn1/httpd-gn1-source.pid
-ErrorLog /tmp/guix-gn1/httpd-gn1-source-error-log
-User gn1
+Listen 8043
+Pidfile /tmp/guix-gn1/httpd-gn1-source-8043.pid
+ErrorLog /tmp/guix-gn1/httpd-gn1-source-error-8043.log
+User wrk
 Group users
 
 
 TypesConfig /gnu/store/qqwmxqcp4vi0m0n3c4d632lhvwgkqyvz-httpd-with-mod-python-2.2.34/etc/httpd/mime.types
 DefaultType application/octet-stream
 # DocumentRoot MUST NOT be in the PythonPath. Because gn1-source must be in PythonPath we leave the document-root keyword above unset.
-PythonPath "sys.path+['/run/current-system/profile/lib/python2.4', '/run/current-system/profile/lib/python2.4/site-packages', '/home/gn1/production/gnshare/gn/web/webqtl']"
+PythonPath "sys.path+['/run/current-system/profile/lib/python2.4', '/run/current-system/profile/lib/python2.4/site-packages', '/home/wrk/gn1-pjotr/gnshare/gn/web/webqtl']"
 # same as 'listen' above
-NameVirtualHost *:8042
-<VirtualHost *:8042>
-  DocumentRoot /home/gn1/production/gnshare/gn/web/
-  Alias /images /home/gn1/production/gnshare/gn/web/images/
-  Alias /javascript /home/gn1/production/gnshare/gn/web/javascript/
-  Alias /css /home/gn1/production/gnshare/gn/web/css/
-  <Directory /home/gn1/production/gnshare/gn/web/images>
+NameVirtualHost *:8043
+<VirtualHost *:8043>
+  DocumentRoot /home/wrk/gn1-pjotr/gnshare/gn/web/
+  Alias /images /home/wrk/gn1-pjotr/gnshare/gn/web/images/
+  Alias /javascript /home/wrk/gn1-pjotr/gnshare/gn/web/javascript/
+  Alias /css /home/wrk/gn1-pjotr/gnshare/gn/web/css/
+  <Directory /home/wrk/gn1-pjotr/gnshare/gn/web/images>
     AllowOverride None
     Order allow,deny
     Allow from all
   </Directory>
-  <Directory /home/gn1/production/gnshare/gn/web/javascript>
+  <Directory /home/wrk/gn1-pjotr/gnshare/gn/web/javascript>
     AllowOverride None
     Order allow,deny
     Allow from all
   </Directory>
-  <Directory /home/gn1/production/gnshare/gn/web/css>
+  <Directory /home/wrk/gn1-pjotr/gnshare/gn/web/css>
     AllowOverride None
     Order allow,deny
     Allow from all
   </Directory>
 </VirtualHost>
-<Directory /home/gn1/production/gnshare/gn/web/webqtl>
+<Directory /home/wrk/gn1-pjotr/gnshare/gn/web/webqtl>
   #what is the difference between these two?
   AddHandler mod_python .py
   #SetHandler python-program
   #publisher has more debug information
-  PythonHandler /home/gn1/production/gnshare/gn/web/webqtl/main.py
+  PythonHandler /home/wrk/gn1-pjotr/gnshare/gn/web/webqtl/main.py
   #PythonHandler mod_python.publisher
   #PythonHandler mod_python.cgihandler
   # only while debugging:
