--- a/etc/httpd.conf
+++ b/etc/httpd.conf
@@ -91,8 +91,8 @@ NameVirtualHost *:8043
   PythonHandler /home/wrk/gn1-pjotr/gnshare/gn/web/webqtl/main.py
   #PythonHandler mod_python.publisher
   #PythonHandler mod_python.cgihandler
+  PythonOption mod_python.session.session_type FileSession
   # only while debugging:
-  PythonOption mod_python.session.session_type MemorySession
   PythonDebug On
 </Directory>
 # only while debugging:
