Fixing GN1 to run with PHP5

--- a/etc/pjotr-test-httpd.conf
+++ b/etc/pjotr-test-httpd.conf
@@ -87,12 +87,16 @@ NameVirtualHost *:8044
 
 # CUSTOM: Add PHP 5 parsing (via CGI) handler and action
 ScriptAlias /local-bin /gnu/store/213zqkj0r6q41cqarwkz5x568ybhd62b-profile/bin
-AddHandler application/x-httpd-php5 php
+AddHandler application/x-httpd-php5 php html htm
 Action application/x-httpd-php5 /local-bin/php-cgi
 <Directory "/usr/local/bin">
     Order allow,deny
     Allow from all
 </Directory>
+
+# AddHandler php5-script php
+# SetEnv PHPRC /home/gn1
+SetEnv PHP_INI_SCAN_DIR /home/gn1/production/gnshare/gn-pjotr-test
 
 <Directory /home/gn1/production/gnshare/gn-pjotr-test/web/test>
     AllowOverride None
